tests/js_error/source_locations/expression/await/await_throws_module.js
let promise = new Promise(() => {});
Object.defineProperty(promise, 'constructor', { get() { throw new Error('Error on get'); } });

await promise;